--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -13,7 +13,7 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 100px;
-    margin-top: 300px;
+    margin-top: 200px;
     gap: 30px;
 }
 .second-case
@@ -26,4 +26,11 @@
 {
     display: flex;
     gap: 20px;
+}
+.tittle-calc
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
 }
